Updates on Chatbot UI and API log 1. Add ol, ul style of chat bubble 2. Change the rendering implementation of Modal content 3. Fix overflow issue on mobile version 4. Update API response log to log answer key instead

--- a/chatbot-ui/src/components/Chatbot/Chatbot.scss
+++ b/chatbot-ui/src/components/Chatbot/Chatbot.scss
@@ -25,6 +25,8 @@
   }
 
   &__history {
-    flex: 1 1 0px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
   }
 }
