--- a/chatbot-ui/src/components/Chatbot/ChatbotBubble.scss
+++ b/chatbot-ui/src/components/Chatbot/ChatbotBubble.scss
@@ -40,4 +40,18 @@
       }
     }
   }
+
+  ul, ol {
+    padding: 0 0 0 30px;
+    margin: 1em 0 0 0;
+
+    > li {
+      margin: 0 0 5px 0;
+    }
+
+    ul, ol {
+      padding: 0 0 0 20px;
+      margin: 5px 0 10px 0;
+    }
+  }
 }
