--- a/chatbot-ui/src/components/Modal.scss
+++ b/chatbot-ui/src/components/Modal.scss
@@ -72,6 +72,11 @@
         p {
           margin: 0;
         }
+
+        ul {
+          padding: 0 0 0 20px;
+          margin: 5px 0 0 0;
+        }
       }
     }
   }
